--- a/special/middle/10.html
+++ b/special/middle/10.html
@@ -68,7 +68,7 @@
             Під час навчання за спеціальністю студенти вивчають новітні IT-технології, розробку та створення WEB-орієнтованих програмних систем на сучасних мовах програмування: С/С++, Assembler, Python, Visual C#, Microsoft DOT NET Framework, Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, SQL, XML, Interbase, Oracle та інших. Програмування мобільних систем різного призначення на основі операційних систем Android, FreeRTOS, LuaRTOS, платформи NodeMCU і систем супутникового геопозиціонування. Опановують програмування систем управління об'єктом на основі технології "Internet OfThings". Вивчають основи проектування і розробки комп'ютерних мереж, управління та адміністрування комп'ютерними мережами. Випускники зможуть працювати на посадах: WEB-програміст; WEB-дизайнер; програміст мобільних систем; консультант з ІТ-систем; керівник проектів в області ІТ; інженер-програміст; тестувальник програмного забезпечення; прикладний програміст; системний програміст; програміст баз даних; інженер з комп’ютерних систем; проектувальник комп’ютерних мереж; системний адміністратор і багато інших посад в рамках IT-технологій З розвитком інноваційної економіки та ринку інформаційних технологій потреба в IT-фахівцях і програмістах в області мережевих та мобільних технологій неухильно зростає.
           </div>
           <div class="flex__center mt-20">
-            <a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+            <a href="https://docs.google.com/forms/d/1I7nPhmyyEcD74e3mgKP3KgpULmFiQepVRJuQWSumUh0/edit?usp=sharing" class="custom-btn btn-15 btn--p">Заповнити форму</a>
           </div>
         </div>
       </div>
