--- a/special/middle/11.html
+++ b/special/middle/11.html
@@ -72,7 +72,7 @@
             Фахівець може працювати в підрозділах великих підприємств та установ, забезпечуючи захист комп’ютерних систем та мереж, у відділах спецслужб та правозахисних органів для захисту кіберпростору та інформаційних даних, здійснювати забезпечення захищеної комп’ютеризованої діяльності банків та фінансових установ, виконувати функції розробника систем захисту інформації
           </div>
           <div class="flex__center mt-20">
-            <a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+            <a href="https://docs.google.com/forms/d/1zmIs162jd_XlNVPbn1qlnNQJ_-pWGbFsM6syoDxX2uQ/edit?usp=sharing" class="custom-btn btn-15 btn--p">Заповнити форму</a>
           </div>
         </div>
       </div>
