--- a/special/middle/24.html
+++ b/special/middle/24.html
@@ -71,7 +71,7 @@
              Під час навчання за спеціальністю студенти вивчають новітні IT-технології та мови програмування: С/С++,Assembler, Python,Visual C#, Microsoft DOT NET Framework Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET ,WordPress, DrupalSQL, XML, Paradox, Interbase, Oracleі інші.
           </div>
           <div class="flex__center mt-20">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-zc8tgW6krA8rU7AGwj5YWJIG6ZNeD4kr-lznSsZy8ASgcw/viewform" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+            <a href="https://docs.google.com/forms/d/1tUEB7YXicGwxzvaGyFRLxXtBv9DNw-shu2h2DacURsc/edit?usp=sharing" class="custom-btn btn-15 btn--p">Заповнити форму</a>
           </div>
         </div>
       </div>
