Змінив путь стрілок на спеціальності

--- a/special/middle/4.html
+++ b/special/middle/4.html
@@ -41,7 +41,7 @@
         <div class="flex__cart">
           <div class="flex__center__row">
             <div class="flex__item">
-               <a href="file:///C:/Users/Admin/Desktop/abitur/1.html">
+               <a href="https://kntuua.github.io/University/abitur/1.html">
                 <i class="fas fa-arrow-circle-left"></i>
               </a>
               <a href="http://audit.kntu.kr.ua/" target="_blank">
