--- a/abitur/2.html
+++ b/abitur/2.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="../css/style.css" />
 		<link rel="stylesheet" type="text/css" href="../css/media.css" />
+		<link rel="icon" href="../img/favicon/1.png" type="image/png" />
 		<title>ЦНТУ</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	</head>
