Замінив посилання на facebook 151 кафедри

--- a/special/higher/16.html
+++ b/special/higher/16.html
@@ -70,7 +70,7 @@
 									<i class="fas fa-university"></i>
 								</a>
 								<a
-									href="https://www.facebook.com/system.engeneer"
+									href="https://www.facebook.com/groups/1160725977343338/?ref=share"
 									target="_blank"
 								>
 									<i class="fab fa-facebook-square"></i>
