Зробив заміну тексту в кафедрах 071 274 281

--- a/special/higher/20.html
+++ b/special/higher/20.html
@@ -102,43 +102,7 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Бакалаври Під час навчання за спеціальністю 274 «Автомобільний
-							транспорт» майбутні фахівці набувають комплекс умінь та знань,
-							який дозволяє виконувати проектні, технологічні та управлінські
-							функції, що пов'язані із процесами розробки, випробування,
-							експлуатації, сертифікації нового транспортного устаткування,
-							автомобілів, дорожніх та інших транспортних машин. Під час
-							навчання вони формують фахові компетентності з: основ
-							машинобудування та експлуатації автомобілів; методів
-							конструювання, діагностування, обслуговування та ремонту типових
-							вузлів та механізмів автомобілів; комп'ютерного програмного
-							забезпечення для вирішення інженерних завдань в галузі транспорту;
-							роботи структур і служб підприємств автомобільного транспорту;
-							технологічного устаткування та методик, що застосовуються при
-							експлуатації та обслуговуванні автотранспортних засобів;
-							планування й здійснення технічного обслуговування та усунення
-							відмов автомобілів. Випускники спеціальності 274 «Автомобільний
-							транспорт» отримують навички розв’язання складних спеціалізованих
-							задач та практичних проблем під час професійної діяльності у
-							галузі транспорту та можуть працювати на автотранспортних,
-							автоексплуатаційних та авторемонтних підприємства всіх форм
-							власності; комунальних підприємствах, які займаються організацією
-							дорожнього руху в містах і регіонах України; підприємствах
-							автотранспортного напрямку обіймаючи посади: інженера з
-							транспорту, головного інженера автотранспортного підприємства,
-							інженера з організації експлуатації та ремонту автомобілів,
-							інженера з впровадження нової техніки й технологій, начальника
-							відділу організації безпеки дорожнього руху, начальника відділу
-							транспорту, начальника гаража, механіка з ремонту транспорту,
-							техніка-конструктора (механіка), техніка з підготовки технічної
-							документації та інших. Підготовка фахівців передбачає поглиблене
-							вивчення мов, постійну апробацію своїх знань та навичок на
-							конференціях, а також під час стажування та проходження виробничих
-							практик як на провідних підприємствах регіону так й підприємствах
-							Євросоюзу (за бажанням здобувача). Стабільно високий попит на
-							фахівців з транспорту на ринку праці надає фахівцям широкі
-							можливості для працевлаштування та побудови кар’єри й гарантує
-							високий рівень оплати праці! Магістри Спеціальність 274
+							Магістри Спеціальність 274
 							«Автомобільний транспорт» - одна з найбільш популярних
 							спеціальностей технічного спрямування в галузі знань 27
 							«Транспорт», орієнтована на урахування сучасних вимог ринку праці
