--- a/special/middle/22.html
+++ b/special/middle/22.html
@@ -81,7 +81,7 @@
 									<div class="flex__subtitle">Номер: 281</div>
 									<div class="flex__subtitle">Назва спеціальності:</div>
 									<h1 class="flex__title">
-										Публіне управління та адміністрування
+										Публічне управління та адміністрування
 									</h1>
 								</div>
 							</div>
